# 3010-Individual-Project

./: .gitignore  README.md
Checkpoints/: Homework5Final.md  hw3_checkpoint.md  hw4_checkpoint.md
Code/: CMakeLists.txt  CVBoard.cpp  CVBoard.hpp  CV_board.hpp  GenBoard.cpp  GenBoard.hpp  Makefile  board.cpp  board.hpp  easy_1.txt  game  gen_board.hpp  main.cpp  square.cpp  square.hpp
Sudoku_Boards/: hard_1.txt  hard_3.txt  medium_1.txt  medium_2.txt
Sudoku_Project/: Board.cpp  Board.h  CMakeLists.txt  CVBoard.cpp  CVBoard.h  GenBoard.cpp  GenBoard.h  Square.cpp  Square.h  computerboarddialog.cpp  computerboarddialog.h  computerboarddialog.ui  gameoptiondialog.cpp  gameoptiondialog.h  gameoptiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  photoboarddialog.cpp  photoboarddialog.h  photoboarddialog.ui  resources.qrc
Sudoku_Project/Sudoku_Boards/: easy_2.txt  medium_1.txt  medium_3.txt
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/.cmake/api/v1/reply/: cache-v2-00b7566af81e64d7581d.json  cmakeFiles-v1-6205b2cc69ee6777b1c6.json  codemodel-v2-070ae7f7ce17aed00888.json  index-2022-04-30T00-29-33-0626.json  target-Sudoku_Project-Debug-ef6d9d30923b9dc3c502.json
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/.cmake/api/v1/reply 2/: cmakeFiles-v1-9c87d870460c02cdcac4.json  codemodel-v2-b173bac9db71f3cd96e9.json  index-2022-04-28T19-15-33-0026.json  target-Sudoku_Project-Debug-0fb8e989e064809d7b56.json  target-Sudoku_Project_autogen_timestamp_deps-Debug-1786cc7dd518c1a80ae0.json
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-ad14549e8ca9677b8d22.json  index-2022-04-30T00-29-30-0897.json  target-Sudoku_Project-Debug-fad7d3c1868ca1ed87fe.json  target-Sudoku_Project_autogen-Debug-a4c021642fcad886dcfc.json
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/Sudoku_Project.app/Contents/: Info.plist
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/Sudoku_Project.app/Contents/MacOS/: Sudoku_Project
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/Sudoku_Project_autogen/: deps  mocs_compilation.cpp
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/Sudoku_Project_autogen/EWIEGA46WW/: moc_Square.cpp  moc_Square.cpp.d  moc_computerboarddialog.cpp  moc_computerboarddialog.cpp.d  moc_gameoptiondialog.cpp  moc_gameoptiondialog.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_photoboarddialog.cpp  moc_photoboarddialog.cpp.d  qrc_resources.cpp
build-Sudoku_Project-Qt_6_2_3_for_macOS-Debug/Sudoku_Project_autogen/include/: ui_computerboarddialog.h  ui_gameoptiondialog.h  ui_mainwindow.h  ui_photoboarddialog.h
